modules/ballerina-core/src/main/java/org/ballerinalang/util/parser/BallerinaParser.java
// Generated from Ballerina.g4 by ANTLR 4.5.3
package org.ballerinalang.util.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BallerinaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, IntegerLiteral=62, FloatingPointLiteral=63, BooleanLiteral=64, 
		QuotedStringLiteral=65, BacktickStringLiteral=66, NullLiteral=67, Identifier=68, 
		WS=69, NEW_LINE=70, LINE_COMMENT=71;
	public static final int
		RULE_compilationUnit = 0, RULE_packageDeclaration = 1, RULE_importDeclaration = 2, 
		RULE_serviceDefinition = 3, RULE_serviceBody = 4, RULE_serviceBodyDeclaration = 5, 
		RULE_resourceDefinition = 6, RULE_functionDefinition = 7, RULE_nativeFunction = 8, 
		RULE_function = 9, RULE_functionBody = 10, RULE_connectorDefinition = 11, 
		RULE_nativeConnector = 12, RULE_nativeConnectorBody = 13, RULE_connector = 14, 
		RULE_connectorBody = 15, RULE_nativeAction = 16, RULE_action = 17, RULE_structDefinition = 18, 
		RULE_structDefinitionBody = 19, RULE_typeMapperDefinition = 20, RULE_nativeTypeMapper = 21, 
		RULE_typeMapper = 22, RULE_typeMapperBody = 23, RULE_constantDefinition = 24, 
		RULE_workerDeclaration = 25, RULE_returnParameters = 26, RULE_namedParameterList = 27, 
		RULE_namedParameter = 28, RULE_returnTypeList = 29, RULE_qualifiedTypeName = 30, 
		RULE_unqualifiedTypeName = 31, RULE_simpleType = 32, RULE_simpleTypeArray = 33, 
		RULE_simpleTypeIterate = 34, RULE_withFullSchemaType = 35, RULE_withFullSchemaTypeArray = 36, 
		RULE_withFullSchemaTypeIterate = 37, RULE_withScheamURLType = 38, RULE_withSchemaURLTypeArray = 39, 
		RULE_withSchemaURLTypeIterate = 40, RULE_withSchemaIdType = 41, RULE_withScheamIdTypeArray = 42, 
		RULE_withScheamIdTypeIterate = 43, RULE_typeName = 44, RULE_parameterList = 45, 
		RULE_parameter = 46, RULE_packageName = 47, RULE_literalValue = 48, RULE_annotation = 49, 
		RULE_annotationName = 50, RULE_elementValuePairs = 51, RULE_elementValuePair = 52, 
		RULE_elementValue = 53, RULE_elementValueArrayInitializer = 54, RULE_statement = 55, 
		RULE_variableDefinitionStatement = 56, RULE_assignmentStatement = 57, 
		RULE_variableReferenceList = 58, RULE_ifElseStatement = 59, RULE_ifClause = 60, 
		RULE_elseIfClause = 61, RULE_elseClause = 62, RULE_iterateStatement = 63, 
		RULE_whileStatement = 64, RULE_breakStatement = 65, RULE_forkJoinStatement = 66, 
		RULE_joinClause = 67, RULE_joinConditions = 68, RULE_timeoutClause = 69, 
		RULE_tryCatchStatement = 70, RULE_catchClause = 71, RULE_throwStatement = 72, 
		RULE_returnStatement = 73, RULE_replyStatement = 74, RULE_workerInteractionStatement = 75, 
		RULE_triggerWorker = 76, RULE_workerReply = 77, RULE_commentStatement = 78, 
		RULE_actionInvocationStatement = 79, RULE_variableReference = 80, RULE_argumentList = 81, 
		RULE_expressionList = 82, RULE_functionInvocationStatement = 83, RULE_functionName = 84, 
		RULE_actionInvocation = 85, RULE_callableUnitName = 86, RULE_backtickString = 87, 
		RULE_expression = 88, RULE_mapStructInitKeyValueList = 89, RULE_mapStructInitKeyValue = 90;
	public static final String[] ruleNames = {
		"compilationUnit", "packageDeclaration", "importDeclaration", "serviceDefinition", 
		"serviceBody", "serviceBodyDeclaration", "resourceDefinition", "functionDefinition", 
		"nativeFunction", "function", "functionBody", "connectorDefinition", "nativeConnector", 
		"nativeConnectorBody", "connector", "connectorBody", "nativeAction", "action", 
		"structDefinition", "structDefinitionBody", "typeMapperDefinition", "nativeTypeMapper", 
		"typeMapper", "typeMapperBody", "constantDefinition", "workerDeclaration", 
		"returnParameters", "namedParameterList", "namedParameter", "returnTypeList", 
		"qualifiedTypeName", "unqualifiedTypeName", "simpleType", "simpleTypeArray", 
		"simpleTypeIterate", "withFullSchemaType", "withFullSchemaTypeArray", 
		"withFullSchemaTypeIterate", "withScheamURLType", "withSchemaURLTypeArray", 
		"withSchemaURLTypeIterate", "withSchemaIdType", "withScheamIdTypeArray", 
		"withScheamIdTypeIterate", "typeName", "parameterList", "parameter", "packageName", 
		"literalValue", "annotation", "annotationName", "elementValuePairs", "elementValuePair", 
		"elementValue", "elementValueArrayInitializer", "statement", "variableDefinitionStatement", 
		"assignmentStatement", "variableReferenceList", "ifElseStatement", "ifClause", 
		"elseIfClause", "elseClause", "iterateStatement", "whileStatement", "breakStatement", 
		"forkJoinStatement", "joinClause", "joinConditions", "timeoutClause", 
		"tryCatchStatement", "catchClause", "throwStatement", "returnStatement", 
		"replyStatement", "workerInteractionStatement", "triggerWorker", "workerReply", 
		"commentStatement", "actionInvocationStatement", "variableReference", 
		"argumentList", "expressionList", "functionInvocationStatement", "functionName", 
		"actionInvocation", "callableUnitName", "backtickString", "expression", 
		"mapStructInitKeyValueList", "mapStructInitKeyValue"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'package'", "';'", "'import'", "'as'", "'service'", "'{'", "'}'", 
		"'resource'", "'('", "')'", "'native'", "'function'", "'throws'", "'connector'", 
		"'action'", "'struct'", "'typemapper'", "'const'", "'='", "'worker'", 
		"','", "':'", "'[]'", "'~'", "'<'", "'>'", "'.'", "'@'", "'if'", "'else'", 
		"'iterate'", "'while'", "'break'", "'fork'", "'join'", "'any'", "'all'", 
		"'timeout'", "'try'", "'catch'", "'throw'", "'return'", "'reply'", "'->'", 
		"'<-'", "'['", "']'", "'+'", "'-'", "'!'", "'^'", "'/'", "'*'", "'%'", 
		"'<='", "'>='", "'=='", "'!='", "'&&'", "'||'", "'create'", null, null, 
		null, null, null, "'null'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "IntegerLiteral", "FloatingPointLiteral", "BooleanLiteral", 
		"QuotedStringLiteral", "BacktickStringLiteral", "NullLiteral", "Identifier", 
		"WS", "NEW_LINE", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Ballerina.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BallerinaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class CompilationUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(BallerinaParser.EOF, 0); }
		public PackageDeclarationContext packageDeclaration() {
			return getRuleContext(PackageDeclarationContext.class,0);
		}
		public List<ImportDeclarationContext> importDeclaration() {
			return getRuleContexts(ImportDeclarationContext.class);
		}
		public ImportDeclarationContext importDeclaration(int i) {
			return getRuleContext(ImportDeclarationContext.class,i);
		}
		public List<ServiceDefinitionContext> serviceDefinition() {
			return getRuleContexts(ServiceDefinitionContext.class);
		}
		public ServiceDefinitionContext serviceDefinition(int i) {
			return getRuleContext(ServiceDefinitionContext.class,i);
		}
		public List<FunctionDefinitionContext> functionDefinition() {
			return getRuleContexts(FunctionDefinitionContext.class);
		}
		public FunctionDefinitionContext functionDefinition(int i) {
			return getRuleContext(FunctionDefinitionContext.class,i);
		}
		public List<ConnectorDefinitionContext> connectorDefinition() {
			return getRuleContexts(ConnectorDefinitionContext.class);
		}
		public ConnectorDefinitionContext connectorDefinition(int i) {
			return getRuleContext(ConnectorDefinitionContext.class,i);
		}
		public List<StructDefinitionContext> structDefinition() {
			return getRuleContexts(StructDefinitionContext.class);
		}
		public StructDefinitionContext structDefinition(int i) {
			return getRuleContext(StructDefinitionContext.class,i);
		}
		public List<TypeMapperDefinitionContext> typeMapperDefinition() {
			return getRuleContexts(TypeMapperDefinitionContext.class);
		}
		public TypeMapperDefinitionContext typeMapperDefinition(int i) {
			return getRuleContext(TypeMapperDefinitionContext.class,i);
		}
		public List<ConstantDefinitionContext> constantDefinition() {
			return getRuleContexts(ConstantDefinitionContext.class);
		}
		public ConstantDefinitionContext constantDefinition(int i) {
			return getRuleContext(ConstantDefinitionContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BallerinaListener ) ((BallerinaListener)listener).enterCompilationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BallerinaListener ) ((BallerinaListener)listener).exitCompilationUnit(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(182);
				packageDeclaration();
				}
			}

			setState(188);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(185);
				importDeclaration();
				}
				}
				setState(190);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(197); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(197);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(191);
					serviceDefinition();
					}
					break;
				case 2:
					{
					setState(192);
					functionDefinition();
					}
					break;
				case 3:
					{
					setState(193);
					connectorDefinition();
					}
					break;
				case 4:
					{
					setState(194);
					structDefinition();
					}
					break;
				case 5:
					{
					setState(195);
					typeMapperDefinition();
					}
					break;
				case 6:
					{
					setState(196);
					constantDefinition();
					}
					break;
				}
				}
				setState(199); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__10) | (1L << T__11) | (1L << T__13) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__27))) != 0) );
			setState(201);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PackageDeclarationContext extends ParserRuleContext {
		public PackageNameContext packageName() {
			return getRuleContext(PackageNameContext.class,0);
		}
		public PackageDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BallerinaListener ) ((BallerinaListener)listener).enterPackageDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BallerinaListener ) ((BallerinaListener)listener).exitPackageDeclaration(this);
		}
	}

	public final PackageDeclarationContext packageDeclaration() throws RecognitionException {
		PackageDeclarationContext _localctx = new PackageDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_packageDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203);
			match(T__0);
			setState(204);
			packageName();
			setState(205);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportDeclarationContext extends ParserRuleContext {
		public PackageNameContext packageName() {
			return getRuleContext(PackageNameContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(BallerinaParser.Identifier, 0); }
		public ImportDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BallerinaListener ) ((BallerinaListener)listener).enterImportDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BallerinaListener ) ((BallerinaListener)listener).exitImportDeclaration(this);
		}
	}

	public final ImportDeclarationContext importDeclaration() throws RecognitionException {
		ImportDeclarationContext _localctx = new ImportDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(207);
			match(T__2);
			setState(208);
			packageName();
			setState(211);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(209);
				match(T__3);
				setState(210);
				match(Identifier);
				}
			}

			setState(213);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ServiceDefinitionContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(BallerinaParser.Identifier, 0); }
		public ServiceBodyContext serviceBody() {
			return getRuleContext(ServiceBodyContext.class,0);
		}
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public ServiceDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_serviceDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BallerinaListener ) ((BallerinaListener)listener).enterServiceDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BallerinaListener ) ((BallerinaListener)listener).exitServiceDefinition(this);
		}
	}
